src/test/compile-fail/purity-infer-fail.rs
// Copyright 2012 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

fn something(f: pure fn()) { f(); }

fn main() {
    let mut x = ~[];
    something(|| x.push(0) ); //~ ERROR access to impure function prohibited in pure context
}
